2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* demo/gpio_int.c: Format to GNU coding style.
	* demo/gpio_test.c: Format to GNU coding style, add GPL header,
	include pihwm.h.
	* demo/i2c_ads1015.c, demo/i2c_hmc6352.c, demo/i2c_mcp23017.c
	* demo/pwm_demo.c, demo/spi_bb_mcp3202.c: Format to GNU coding
	style.
	* lib/pihwm.h: Include unistd.h, needed for sleep.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* demo/Makefile.am: Add -lpthread to each demo LDADD
	* demo/Makefile.in: Regenerated.
	* doc/Makefile.in: Regenerated.
	* lib/Makefile.in: Regenerated.
	* Makefile.am: Correct typo "SUBDIRS".
	* Makefile.in: Regenerated.
	* testsuite/Makefile.in: Regenerated.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* lib/pi_gpio.c: Add GPL header, change C++ comments to C,
	include config.h first.
	* lib/pi_gpio.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	(isr_handler): Change return type to void *, remove unused var
	"len", cast return types to void *, test results of calls to read ()
	(gpio_clear_int): return 0 always.
	(gpio_read): Use type compliant initialization of valStr;
	* lib/pi_i2c.c: Add GPL header, include config.h first, include
	sys/ioctl.h.
	* lib/pi_i2c.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	* lib/pi_pwm.c: Add GPL header, change C++ comments to C,
	include config.h first.
	<clk_map, gpio_map, pwm_map>: Changed declaration to unsigned int.
	* lib/pi_pwm.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	* lib/pihwm.h: Add GPL header, change C++ comments to C. Change to
	use sleep rather than usleep, and remove header.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* lib/pi_gpio.h, lib/pi_i2c.c, lib/pi_i2c.h, lib/pi_pwm.c,
	* lib/pi_pwm.h, lib/pihwm.h: Reformat using indent to GNU coding
	standards.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* aclocal.m4, AUTHORS, compile, config.guess, config.h.in,