@@ -32,13 +32,13 @@
 #define detachInterrupt(pin)		gpio_clear_int(pin);
 
 /* Function prototypes */
-extern int gpio_init (int pin, char *dir);
-extern int gpio_set_int (int pin, void (*isr) (int), char *mode);
-extern int gpio_clear_int (int pin);
-extern int gpio_edge (int pin, char *edge);
-extern int gpio_valfd (int pin);
-extern int gpio_write (int pin, char *val);
-extern int gpio_read (int pin);
-extern int gpio_release (int pin);
+int gpio_init (int pin, char *dir);
+int gpio_set_int (int pin, void (*isr) (int), char *mode);
+int gpio_clear_int (int pin);
+int gpio_edge (int pin, char *edge);
+int gpio_valfd (int pin);
+int gpio_write (int pin, char *val);
+int gpio_read (int pin);
+int gpio_release (int pin);
 
 #endif
