@@ -1,3 +1,11 @@
+2012-09-17  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	Merging in from commit c93f284a42ecadddbcabf95c042e77dbf51c719b by
+	Omer Kilic <omerkilic@gmail.com>
+
+	* lib/pi_gpio.h, lib/pi_i2c.h, lib/pi_pwm.h: Remove "extern"
+	throughout.
+
 2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* demo/gpio_int.c: Format to GNU coding style.
